--- a/Assets/Style/component.css
+++ b/Assets/Style/component.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Akronim&family=Fugaz+One&family=Kanit:wght@500&family=Rubik:wght@600;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Rye&display=swap');
+
 :root {
   --primary-color: #fff0f3;
   --secondary-color: #ffb3c1;
